[gd_scene load_steps=34 format=1]

[ext_resource path="res://scenes/global.gd" type="Script" id=1]
[ext_resource path="res://gui/global/bg.png" type="Texture" id=2]
[ext_resource path="res://gui/global/friederich-select.png" type="Texture" id=3]
[ext_resource path="res://gui/global/adela-select.png" type="Texture" id=4]
[ext_resource path="res://gui/global/logo.png" type="Texture" id=5]
[ext_resource path="res://gui/menu/textitem.tscn" type="PackedScene" id=6]
[ext_resource path="res://gui/fonts/S-12-dialog.fnt" type="BitmapFont" id=7]
[ext_resource path="res://gui/fonts/L-24.fnt" type="BitmapFont" id=8]
[ext_resource path="res://gui/fonts/L-24-Keyboard-outline.fnt" type="BitmapFont" id=9]
[ext_resource path="res://gui/global/selectbutton.gd" type="Script" id=10]
[ext_resource path="res://players/friederich/friederich.tscn" type="PackedScene" id=11]
[ext_resource path="res://players/adela/adela.tscn" type="PackedScene" id=12]
[ext_resource path="res://gui/menu/languageitem.tscn" type="PackedScene" id=13]
[ext_resource path="res://gui/menu/settings.tscn" type="PackedScene" id=14]
[ext_resource path="res://gui/menu/keylabel.tscn" type="PackedScene" id=15]
[ext_resource path="res://gui/loading/loading.tscn" type="PackedScene" id=16]
[ext_resource path="res://gui/confirm.wav" type="Sample" id=17]
[ext_resource path="res://gui/cursor.wav" type="Sample" id=18]
[ext_resource path="res://gui/sequences/demonic.wav" type="Sample" id=19]
[ext_resource path="res://gui/global/global.ogg" type="AudioStream" id=20]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="CanvasItemShader" id=7]

_code = { "fragment":"uniform color start=color(0.2,0.4,1.0,1);\nuniform color stop=color(0.2,0.4,1.0,0);\nCOLOR = mix(start, stop, UV.x);\n\nCOLOR.a = tex(TEXTURE,UV).a*COLOR.a;", "fragment_ofs":0, "light":"", "light_ofs":0, "vertex":"", "vertex_ofs":0 }

[sub_resource type="CanvasItemMaterial" id=8]

shader/shader = SubResource( 7 )
shader/shading_mode = 0
shader_param/start = Color( 0.788235, 0.74902, 0.631373, 1 )
shader_param/stop = Color( 0.788235, 0.74902, 0.631373, 0 )

[sub_resource type="ImageTexture" id=9]

flags = 6
image = Image()
size = Vector2( 1, 1 )
storage = 0
lossy_quality = 1.0

[sub_resource type="ImageTexture" id=10]

flags = 2
image = Image()
size = Vector2( 1, 1 )
storage = 0
lossy_quality = 0.7

[sub_resource type="Animation" id=11]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/menu/BG:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 0.25, 1 ), "update":0, "values":[ Vector2( 0, -424 ), Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/menu/BG/friederich:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/menu/BG/adela:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/menu/logo/Sprite:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 4, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/menu/main:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ false, true ] }
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/menu/newgame:visibility/visible")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = { "times":FloatArray( 1 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"focus_main" } ] }

[sub_resource type="Animation" id=12]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/menu/BG:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 0.25, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 0, -424 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/menu/BG/friederich:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ false, true ] }
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/menu/BG/adela:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ false, true ] }
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/menu/logo/Sprite:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 0.105112, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/menu/main:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/menu/newgame:visibility/visible")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ false, true ] }
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = { "times":FloatArray( 1 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"focus_newgame" } ] }

[sub_resource type="SampleLibrary" id=13]

samples/confirm = { "db":0.0, "pitch":1.0, "sample":ExtResource( 17 ) }
samples/cursor = { "db":0.0, "pitch":1.0, "sample":ExtResource( 18 ) }
samples/demonic = { "db":0.0, "pitch":1.0, "sample":ExtResource( 19 ) }

[node name="Global" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="menu" type="Control" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="BG" type="Node2D" parent="CanvasLayer/menu"]

[node name="Sprite" type="Sprite" parent="CanvasLayer/menu/BG"]

texture = ExtResource( 2 )
centered = false
modulate = Color( 0.135956, 0.279669, 0.527344, 1 )

[node name="friederich" type="Sprite" parent="CanvasLayer/menu/BG"]

visibility/visible = false
transform/pos = Vector2( 0, 424 )
texture = ExtResource( 3 )
centered = false
modulate = Color( 0.133333, 0.278431, 0.52549, 1 )

[node name="adela" type="Sprite" parent="CanvasLayer/menu/BG"]

visibility/visible = false
transform/pos = Vector2( 385, 467 )
texture = ExtResource( 4 )
centered = false
modulate = Color( 0.133333, 0.278431, 0.52549, 1 )

[node name="logo" type="Node2D" parent="CanvasLayer/menu"]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="CanvasLayer/menu/logo"]

transform/pos = Vector2( 400, 99 )
texture = ExtResource( 5 )

[node name="main" type="Control" parent="CanvasLayer/menu"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="options" type="VBoxContainer" parent="CanvasLayer/menu/main"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 356.0
margin/right = 535.0
margin/bottom = 568.0
alignment = 1

[node name="newgame" parent="CanvasLayer/menu/main/options" instance=ExtResource( 6 )]

focus_neighbour/left = NodePath(".")
focus_neighbour/right = NodePath(".")
margin/left = 0.0
margin/right = 135.0
text = "KEY_NEWGAME"

[node name="loadgame" parent="CanvasLayer/menu/main/options" instance=ExtResource( 6 )]

focus_neighbour/left = NodePath(".")
focus_neighbour/right = NodePath(".")
margin/left = 0.0
margin/top = 36.0
margin/right = 135.0
margin/bottom = 68.0
text = "KEY_LOADGAME"

[node name="settings" parent="CanvasLayer/menu/main/options" instance=ExtResource( 6 )]

focus_neighbour/left = NodePath(".")
focus_neighbour/right = NodePath(".")
margin/left = 0.0
margin/top = 72.0
margin/right = 135.0
margin/bottom = 104.0
text = "KEY_SETTINGS"

[node name="bonus" parent="CanvasLayer/menu/main/options" instance=ExtResource( 6 )]

focus_neighbour/left = NodePath(".")
focus_neighbour/right = NodePath(".")
margin/left = 0.0
margin/top = 108.0
margin/right = 135.0
margin/bottom = 140.0
disabled = true
text = "Bonus"

[node name="credits" parent="CanvasLayer/menu/main/options" instance=ExtResource( 6 )]

focus_neighbour/left = NodePath(".")
focus_neighbour/right = NodePath(".")
margin/left = 0.0
margin/top = 144.0
margin/right = 135.0
margin/bottom = 176.0
disabled = true
text = "KEY_CREDITS"

[node name="quitgame" parent="CanvasLayer/menu/main/options" instance=ExtResource( 6 )]

focus_neighbour/left = NodePath(".")
focus_neighbour/right = NodePath(".")
margin/left = 0.0
margin/top = 180.0
margin/right = 135.0
margin/bottom = 212.0
text = "KEY_QUITGAME"

[node name="version" type="Label" parent="CanvasLayer/menu/main"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 720.0
margin/top = 569.0
margin/right = 784.0
margin/bottom = 592.0
custom_fonts/font = ExtResource( 7 )
text = "v0.4"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="newgame" type="Control" parent="CanvasLayer/menu"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="title" type="Label" parent="CanvasLayer/menu/newgame"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -200.0
margin/top = 16.0
margin/right = -560.0
margin/bottom = 47.0
custom_fonts/font = ExtResource( 8 )
text = "KEY_CHARSELECT"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="backbutton" type="HBoxContainer" parent="CanvasLayer/menu/newgame"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 20.0
margin/right = 171.0
margin/bottom = 52.0
alignment = 0

[node name="back" parent="CanvasLayer/menu/newgame/backbutton" instance=ExtResource( 6 )]

focus_neighbour/left = NodePath(".")
focus_neighbour/top = NodePath(".")
focus_neighbour/right = NodePath("../../adela")
focus_neighbour/bottom = NodePath("../../friederich")
margin/left = 0.0
margin/right = 93.0
text = "MAP_BACK"

[node name="key" type="Label" parent="CanvasLayer/menu/newgame/backbutton"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 97.0
margin/top = 0.0
margin/right = 121.0
margin/bottom = 31.0
custom_fonts/font = ExtResource( 9 )
text = "Z"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="friederich" type="ToolButton" parent="CanvasLayer/menu/newgame"]

focus_neighbour/left = NodePath(".")
focus_neighbour/top = NodePath("../backbutton/back")
focus_neighbour/right = NodePath("../adela")
focus_neighbour/bottom = NodePath(".")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 12.0
margin/bottom = 20.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 10 )

[node name="title" type="Label" parent="CanvasLayer/menu/newgame/friederich"]

anchor/left = 2
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = -444.0
margin/bottom = -552.0
custom_fonts/font = ExtResource( 8 )
text = "Friederich"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sprite" parent="CanvasLayer/menu/newgame/friederich" instance=ExtResource( 11 )]

transform/pos = Vector2( 200, 460 )
script/script = null

[node name="adela" type="ToolButton" parent="CanvasLayer/menu/newgame"]

focus_neighbour/left = NodePath("../friederich")
focus_neighbour/top = NodePath("../backbutton/back")
focus_neighbour/right = NodePath(".")
focus_neighbour/bottom = NodePath(".")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 399.0
margin/top = 0.0
margin/right = 411.0
margin/bottom = 22.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true
script/script = ExtResource( 10 )

[node name="title" type="Label" parent="CanvasLayer/menu/newgame/adela"]

anchor/left = 3
anchor/right = 2
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 0.0
margin/right = 33.4167
margin/bottom = -552.0
custom_fonts/font = ExtResource( 8 )
text = "Adela"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sprite" parent="CanvasLayer/menu/newgame/adela" instance=ExtResource( 12 )]

transform/pos = Vector2( 201, 460 )
script/script = null

[node name="settingsmenu" type="Control" parent="CanvasLayer/menu"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="title" type="Label" parent="CanvasLayer/menu/settingsmenu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 56.0
margin/top = 12.0
margin/right = 260.0
margin/bottom = 43.0
custom_fonts/font = ExtResource( 8 )
text = "KEY_SETTINGS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="line" type="Sprite" parent="CanvasLayer/menu/settingsmenu"]

material/material = SubResource( 8 )
transform/pos = Vector2( 48, 48 )
transform/scale = Vector2( 458, 1 )
texture = SubResource( 9 )
centered = false

[node name="language" parent="CanvasLayer/menu/settingsmenu" instance=ExtResource( 13 )]

focus_neighbour/left = NodePath(".")
focus_neighbour/top = NodePath("../settings/save")
margin/left = 98.0
margin/top = 64.0
margin/right = 234.0
margin/bottom = 96.0

[node name="settings" parent="CanvasLayer/menu/settingsmenu" instance=ExtResource( 14 )]

editor/display_folded = true
margin/left = 32.0
margin/top = 98.0
margin/right = 768.0
margin/bottom = 592.0

[node name="sfxslider" parent="CanvasLayer/menu/settingsmenu/settings"]

focus_neighbour/top = NodePath("../../language")

[node name="save" parent="CanvasLayer/menu/settingsmenu/settings"]

focus_neighbour/bottom = NodePath("../../language")

[node name="reset" parent="CanvasLayer/menu/settingsmenu/settings"]

focus_neighbour/bottom = NodePath("../../language")

[node name="back" parent="CanvasLayer/menu/settingsmenu" instance=ExtResource( 15 )]

editor/display_folded = true
margin/left = 503.0
margin/top = 16.0
margin/right = 744.0
margin/bottom = 47.0

[node name="input" parent="CanvasLayer/menu/settingsmenu/back"]

margin/left = 128.0
text = "MAP_BACK"

[node name="loadmenu" type="Control" parent="CanvasLayer/menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="loading" parent="CanvasLayer/menu" instance=ExtResource( 16 )]

process/pause_mode = 2
visibility/visible = false

[node name="quit" type="Control" parent="CanvasLayer/menu"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="shield" type="TextureFrame" parent="CanvasLayer/menu/quit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 592.0
texture = SubResource( 10 )
modulate = Color( 1, 1, 1, 0.53549 )
expand = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/menu/quit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 177.0
margin/right = 800.0
margin/bottom = 304.0
custom_fonts/font = ExtResource( 8 )
text = "Quit game\?"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="options" type="HBoxContainer" parent="CanvasLayer/menu/quit"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 384.0
margin/right = 800.0
margin/bottom = 416.0
custom_constants/separation = 200
alignment = 1

[node name="yes" parent="CanvasLayer/menu/quit/options" instance=ExtResource( 6 )]

focus_neighbour/left = NodePath(".")
focus_neighbour/top = NodePath(".")
focus_neighbour/right = NodePath("../no")
focus_neighbour/bottom = NodePath(".")
margin/left = 224.0
margin/right = 303.0
text = "KEY_YES"

[node name="no" parent="CanvasLayer/menu/quit/options" instance=ExtResource( 6 )]

focus_neighbour/left = NodePath("../yes")
focus_neighbour/top = NodePath(".")
focus_neighbour/right = NodePath(".")
focus_neighbour/bottom = NodePath(".")
margin/left = 503.0
margin/right = 575.0
text = "KEY_NO"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/menu = SubResource( 11 )
anims/newgame = SubResource( 12 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 13 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 20 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="CanvasLayer/menu/main/options/newgame" to="." method="_on_newgame_pressed"]

[connection signal="pressed" from="CanvasLayer/menu/main/options/loadgame" to="." method="_on_loadgame_pressed"]

[connection signal="pressed" from="CanvasLayer/menu/main/options/settings" to="." method="_on_settings_pressed"]

[connection signal="pressed" from="CanvasLayer/menu/main/options/quitgame" to="." method="_quit_pressed"]

[connection signal="pressed" from="CanvasLayer/menu/newgame/backbutton/back" to="." method="_on_newgame_back_pressed"]

[connection signal="focus_enter" from="CanvasLayer/menu/newgame/friederich" to="." method="_on_friederich_focus_enter"]

[connection signal="focus_enter" from="CanvasLayer/menu/newgame/friederich" to="CanvasLayer/menu/newgame/friederich" method="_on_focus_enter"]

[connection signal="focus_exit" from="CanvasLayer/menu/newgame/friederich" to="." method="_on_friederich_focus_exit"]

[connection signal="focus_exit" from="CanvasLayer/menu/newgame/friederich" to="CanvasLayer/menu/newgame/friederich" method="_on_focus_exit"]

[connection signal="pressed" from="CanvasLayer/menu/newgame/friederich" to="." method="_on_friederich_selected"]

[connection signal="focus_enter" from="CanvasLayer/menu/newgame/adela" to="." method="_on_adela_focus_enter"]

[connection signal="focus_enter" from="CanvasLayer/menu/newgame/adela" to="CanvasLayer/menu/newgame/adela" method="_on_focus_enter"]

[connection signal="focus_exit" from="CanvasLayer/menu/newgame/adela" to="." method="_on_adela_focus_exit"]

[connection signal="focus_exit" from="CanvasLayer/menu/newgame/adela" to="CanvasLayer/menu/newgame/adela" method="_on_focus_exit"]

[connection signal="pressed" from="CanvasLayer/menu/newgame/adela" to="." method="_on_adela_selected"]

[connection signal="pressed" from="CanvasLayer/menu/settingsmenu/language" to="." method="_on_language_pressed"]

[connection signal="focus_exit" from="CanvasLayer/menu/settingsmenu/settings/sfxslider" to="CanvasLayer/menu/settingsmenu/settings" method="_on_sfxslider_focus_exit"]

[connection signal="input_event" from="CanvasLayer/menu/settingsmenu/settings/sfxslider" to="CanvasLayer/menu/settingsmenu/settings" method="_on_sfxslider_input_event"]

[connection signal="value_changed" from="CanvasLayer/menu/settingsmenu/settings/sfxslider" to="CanvasLayer/menu/settingsmenu/settings" method="_on_sfxslider_value_changed"]

[connection signal="input_event" from="CanvasLayer/menu/settingsmenu/settings/bgmslider" to="CanvasLayer/menu/settingsmenu/settings" method="_on_bgmslider_input_event"]

[connection signal="value_changed" from="CanvasLayer/menu/settingsmenu/settings/bgmslider" to="CanvasLayer/menu/settingsmenu/settings" method="_on_bgmslider_value_changed"]

[connection signal="pressed" from="CanvasLayer/menu/settingsmenu/settings/save" to="CanvasLayer/menu/settingsmenu/settings" method="_on_save_pressed"]

[connection signal="pressed" from="CanvasLayer/menu/settingsmenu/settings/reset" to="CanvasLayer/menu/settingsmenu/settings" method="_on_reset_pressed"]

[connection signal="pressed" from="CanvasLayer/menu/quit/options/yes" to="." method="quit_game"]

[connection signal="pressed" from="CanvasLayer/menu/quit/options/no" to="." method="hide_quit"]


[editable path="CanvasLayer/menu/settingsmenu/settings"]
[editable path="CanvasLayer/menu/settingsmenu/back"]
